# espresso-logic

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  TESTING.md  build-wasm.sh  build.rs  espresso_demo.js  espresso_demo.wasm  index.html  package.json  styles.css  vite.config.js
.cargo/: config.toml
.github/: FUNDING.yml  README.md
.github/workflows/: ci.yml  deploy.yml
assets/: index-BPhHLaqb.css  index-DOcr-BaI.js  index-DX7qR6lh.js
benches/: README.md  pla_benchmarks.rs
docs/: API.md  BOOLEAN_EXPRESSIONS.md  CLI.md  EXAMPLES.md  FUTURE_WORK.md  INSTALLATION.md  LEAK_TESTING.md  MEMORY_SAFETY.md  PLA_FORMAT.md  PROCESS_ISOLATION.md  THREAD_LOCAL_IMPLEMENTATION.md
espresso-logic-macros/: Cargo.toml
espresso-logic-macros/src/: lib.rs
espresso-src/: black_white.c  cofactor.c  cvrin.c  cvrm.c  cvrmisc.c  espresso.h  essentiality.c  expand.c  globals.c  irred.c  main.c  main.h  map.c  matrix.c  opo.c  pair.c  reduce.c  set.c  setc.c  sigma.c  signature.c  sminterf.c  sparse_int.h  thread_local_accessors.c  thread_local_accessors.h  unate.c  utility.h
examples/: boolean_expressions.rs  c_element_example.rs  concurrent_transparent.rs  cover_types.rs  dynamic_fold.rs  espresso_direct_api.rs  expr_macro_demo.rs  expression_composition.rs  inspect_cubes.rs  intentional_leak.rs  leak_check.rs  minimize.rs  pla_file.rs  reader_api.rs  test_combining_expressions.rs  test_complete_mixing.rs  test_new_api.rs  test_oneline_example.rs  test_simplified_mixing.rs  threshold_gate_example.rs  transparent_api.rs  variable_labels.rs  verify_minimize.rs  writer_api.rs  xor_function.rs
public/wasm/: espresso_demo.js
scripts/: check_leaks_macos.sh  check_memory_leaks.sh
src/: App.jsx  conversion.rs  cover.rs  error.rs  espresso.rs  examples.rs  ipc.rs  lib.rs  main.rs  pla.rs  styles.css  symbol.rs  sys.rs  unsafe.rs  unsafe_espresso.rs  unsafe_pla.rs  wasm-loader.js  worker.rs
src/bdd/: batch.rs  brand.rs  builder.rs  context.rs  encoding.rs  handle.rs  manager.rs  manager_cell.rs  mod.rs  scope.rs  tests.rs
src/components/: CoverTypeSelector.jsx  EditorPanel.jsx  ExamplesSelector.jsx  ResultsPanel.jsx  TruthTable.jsx  cover_type_selector.rs  examples_selector.rs  mod.rs  truth_table.rs
src/cover/: conversions.rs  cubes.rs  dnf.rs  error.rs  expressions.rs  iterators.rs  label.rs  labels.rs  minimisation.rs  minimizable.rs  minimize.rs  minterm.rs  mod.rs  output_set.rs  symbols.rs  tests.rs
src/cover/pla/: error.rs  mod.rs
src/espresso/: error.rs  mod.rs
src/expression/: ast.rs  bdd.rs  bool_expr.lalrpop  builder.rs  context.rs  conversions.rs  cover.rs  display.rs  error.rs  eval.rs  factorization.rs  manager.rs  manager_cell.rs  minimize.rs  mod.rs  operators.rs  parser.rs  rpn.rs  tests.rs
src/pla/: error.rs  mod.rs
tests/: README.md  comprehensive_regression.sh  integration_test.rs  quick_regression.sh  regression_test.sh  test_boolean_expressions.rs  test_both_notations.rs  test_build_poison.rs  test_cli.rs  test_cover_builder.rs  test_expr_macro.rs  test_integration.rs  test_memory_safety.rs  test_pla_unsafe.rs  test_process_isolation.rs  test_programmatic_via_pla.rs  test_safe_api.rs  test_thread_safety.rs  test_unsafe_api.rs
tlex/: w14.pla  w16.pla  w30x4.pla  w32.pla  w60.pla
wasm/: espresso_demo.wasm
