[package]
name = "espresso-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Marcos Sartori <marcos.sartori@ncl.ac.uk>"]

[[bin]]
name = "espresso_demo"
path = "src/main.rs"

[dependencies]
espresso-logic = { git = "https://github.com/marlls1989/espresso-logic", branch = "master" }

[profile.release]
opt-level = "z"
lto = true
