[package]
name = "espresso-logic-macros"
version = "5.2.0"
edition = "2021"
rust-version = "1.82"
authors = ["Marcos Sartori <marcos.sartori@ncl.ac.uk>"]
description = "Procedural macros for espresso-logic"
license = "MIT"
repository = "https://github.com/marlls1989/espresso-logic"
keywords = ["logic", "minimization", "boolean", "pla", "espresso"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.0"
